--- a/org.eclipse.lemminx/pom.xml
+++ b/org.eclipse.lemminx/pom.xml
@@ -6,6 +6,7 @@
 		<version>0.24.0-wso2v69-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
+	<name>MI Language Server</name>
 	<artifactId>mi-language-server</artifactId>
 	<packaging>jar</packaging>
 	<properties>
@@ -35,6 +36,10 @@
 			</resource>
 		</resources>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+			</plugin>
 			<plugin>
 				<groupId>org.antlr</groupId>
 				<artifactId>antlr4-maven-plugin</artifactId>
