Fix secret name in github workflow

--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -65,7 +65,7 @@ jobs:
           mvn clean install -DskipTests
       - name: Deploy artifacts with Maven
         env:
-          GITHUB_TOKEN: ${{ secrets.WSO2_INTEGRATION_BOT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GIT_BOT_TOKEN }}
         run: |
           mvn --batch-mode release:prepare release:perform \
             -DreleaseVersion=${{ steps.compute_next.outputs.release_version }} \
@@ -78,7 +78,7 @@ jobs:
           -x '*tests.jar' '*-sources.jar' '*-javadoc.jar'
       - name: Create Github Release with Assets
         env:
-          GITHUB_TOKEN: ${{ secrets.WSO2_INTEGRATION_BOT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GIT_BOT_TOKEN }}
         run: |
           gh release create "${{ steps.compute_next.outputs.release_version }}" \
             --repo="$GITHUB_REPOSITORY" \
