--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GIT_BOT_TOKEN }}
+          fetch-depth: 0
 
       - name: Set up JDK
         uses: actions/setup-java@v4
