--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.wso2</groupId>
+	<groupId>org.wso2.language.server</groupId>
 	<artifactId>mi-language-server-parent</artifactId>
 	<version>0.24.0-wso2v69-SNAPSHOT</version>
 	<packaging>pom</packaging>
